# AttendanceVision

./: .clang-format  CMakeLists.txt  resources.qrc
data/: attendance.db  detection.py  init_db.py  script.py
data/daemon/: camera_worker.py  main.py  tracker.py
data/scripts/: fill_visits.py
src/: main.cpp
src-old/: main.cpp
src-old/AttendanceTab/: AttendanceTab.cpp  AttendanceTab.h
src-old/CamerasTab/: CamerasTab.cpp  CamerasTab.h
src/CamerasTab/: CamerasTab.cpp  CamerasTab.h
src/Controller/: CameraController.cpp  CameraController.h  DaemonController.cpp  DaemonController.h  StatisticsController.cpp  StatisticsController.h
src/CustomWidgets/: CameraLabel.cpp  CameraLabel.h  VTabWidget.cpp  VTabWidget.h
src/General/: General.h
src/MainWindow/: MainWindow.cpp  MainWindow.h
src/Model/: CameraManager.cpp  CameraManager.h  StatsRepository.cpp  StatsRepository.h
src/View/: CameraDialog.cpp  CameraDialog.h  CamerasTab.cpp  CamerasTab.h  DaemonTab.cpp  DaemonTab.h  StatisticsTab.cpp  StatisticsTab.h
